fix sonar issues in PropertyImageServiceTest